@@ -479,6 +479,9 @@ void KWString::loadFormat( KOMLParser& parser, vector<KOMLAttrib>& lst, KWordDoc
                                     case VT_PGNUM:
                                         var = new KWPgNumVariable( _doc );
                                         break;
+                                    case VT_CUSTOM:
+                                        var = new KWCustomVariable( _doc );
+                                        break;
                                     default: break;
                                     }
 
